# netlify-rust-sudoku

./: .template.html  .update  .versions  .wc-tags.json  README.md  index.html  netlify.toml
netlify/functions/puzzle/: Cargo.toml  LICENSE  README.md
netlify/functions/puzzle/src/: main.rs
