[package]
  name = "puzzle"
  version = "0.0.1"
  authors = ["Richard Hess <contact@eswat2.dev>"]
  description = "prototype -- a Sudoku puzzle API written in Rust"
  license = "MIT"
  edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  aws_lambda_events = "0.4.0"
  base64 = "0.13.0"
  http = "0.2.4"
  lambda_runtime = "0.3.0"
  log = "0.4.14"
  serde_json = "1.0.85"
  simple_logger = "1.11.0"
  sudoku = "0.7.0"
  tokio = "1.6.1"
